--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "KEY", "\"c2b58edb92bd47708e76c7ce0b1d84f6\""
     }
 
     buildTypes {
